--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <fragment
+        class="com.example.admin.workout.WorkoutListFragment"
+        android:id="@+id/list_frag"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2"/>
+    <fragment
         class="com.example.admin.workout.WorkoutDetailFragment"
         android:id="@+id/detail_frag"
-        android:layout_width="match_parent"
+        android:layout_weight="3"
+        android:layout_width="0dp"
         android:layout_height="match_parent" />
+
 </LinearLayout>
