--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,9 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"/>
-    <fragment
-        class="com.example.admin.workout.WorkoutDetailFragment"
-        android:id="@+id/detail_frag"
+    <FrameLayout
+
+        android:id="@+id/fragment_container"
         android:layout_weight="3"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
