--- a/app/src/main/res/layout/fragment_stopwatch.xml
+++ b/app/src/main/res/layout/fragment_stopwatch.xml
@@ -20,8 +20,9 @@
         android:layout_below="@+id/time_view"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:onClick="onClickStart"
         android:text="@string/start" />
+        <!--android:onClick="onClickStart"-->
+
     <Button
         android:id="@+id/stop_button"
         android:layout_width="wrap_content"
@@ -29,15 +30,17 @@
         android:layout_below="@+id/start_button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:onClick="onClickStop"
         android:text="@string/stop" />
-    <Button
-        android:id="@+id/reset_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/stop_button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:onClick="onClickReset"
-        android:text="@string/reset" />
-    </RelativeLayout>
+    <!--android:onClick="onClickStop"-->
+
+<Button
+    android:id="@+id/reset_button"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/stop_button"
+    android:layout_centerHorizontal="true"
+    android:layout_marginTop="10dp"
+    android:text="@string/reset" />
+    <!--android:onClick="onClickReset"-->
+
+</RelativeLayout>
